--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,97 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.revolutionuc.donut">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".View.LoginActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".View.HomeActivity"
+            android:label="HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".View.HomeActivity" />
+        </activity>
+
+        <activity android:name=".View.OfferActivity"
+            android:label="OfferActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".View.OfferActivity" />
+        </activity>
+
+        <activity android:name=".View.TrendActivity"
+            android:label="TrendActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".View.TrendActivity" />
+        </activity>
     </application>
 
 </manifest>
+
+
+
+
+
+<!--<application-->
+    <!--android:allowBackup="true"-->
+    <!--android:icon="@mipmap/ic_launcher"-->
+    <!--android:label="@string/app_name"-->
+    <!--android:supportsRtl="true"-->
+    <!--android:theme="@style/AppTheme" >-->
+    <!--<activity-->
+        <!--android:name=".LoginActivity"-->
+        <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen"-->
+        <!--android:label="@string/title_activity_login" >-->
+        <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
+    <!--</activity>-->
+    <!--<activity-->
+        <!--android:name=".DonationActivity"-->
+        <!--android:label="@string/title_activity_next"-->
+        <!--android:parentActivityName=".LoginActivity"-->
+        <!--android:theme="@style/AppTheme.NoActionBar" >-->
+        <!--<meta-data-->
+            <!--android:name="android.support.PARENT_ACTIVITY"-->
+            <!--android:value="com.hackathon.google.micro.LoginActivity" />-->
+    <!--</activity>-->
+    <!--<activity-->
+        <!--android:name=".RedemptionActivity"-->
+        <!--android:label="@string/title_activity_redemption"-->
+        <!--android:theme="@style/AppTheme.NoActionBar" >-->
+    <!--</activity>-->
+    <!--<activity-->
+        <!--android:name=".ShelterActivity"-->
+        <!--android:label="@string/title_activity_shelter"-->
+        <!--android:theme="@style/AppTheme.NoActionBar" >-->
+    <!--</activity>-->
+<!--</application>-->
+
+<!--</manifest>-->
